...

  /// [消息 Tab 角标, 通讯录 Tab 角标]。
  final List<int> badgeCounts;

  static const defaultItems = [
    ImTabItem(
      label: '消息',
      icon: 'assets/tabbar/chat.png',
      activeIcon: 'assets/tabbar/chat_active.png',
    ),
    ImTabItem(
      label: '好友',
      icon: 'assets/tabbar/friend.png',
      activeIcon: 'assets/tabbar/friend_active.png',
    ),
    ImTabItem(
      label: '我的',
      icon: 'assets/tabbar/mine.png',
      activeIcon: 'assets/tabbar/mine_active.png',
    ),
  ];

  @override
...
